--- a/css/styles.css
+++ b/css/styles.css
@@ -6,7 +6,6 @@ body,
 html {
 	-webkit-box-sizing: border-box;
 	box-sizing: border-box;
-	/* margin-left: 1em; */
 	margin-left: auto;
 	margin-right:  auto;
 }
@@ -41,7 +40,6 @@ a {
 
 a:hover,
 a:focus {
-	color: #3397db;
 	text-decoration: none;
 }
 
@@ -76,8 +74,6 @@ section {
 
 #maincontent {
 	background-color: #f3f3f3;
-	/* min-height: 100%; */
-	/* display:  flex; */
 	display:  -webkit-box;
 	display:  -ms-flexbox;
 	display:  flex;
@@ -101,7 +97,6 @@ section {
 
 nav {
 	width: 100%;
-	height: 80px;
 	background-color: #252831;
 	text-align: center;
 }
@@ -112,25 +107,25 @@ nav h1 {
 
 nav h1 a {
 	color: #fff;
-	font-size: 14pt;
+	font-size: 1.2em;
 	font-weight: 200;
 	letter-spacing: 10px;
 	text-transform: uppercase;
 }
 
 #breadcrumb {
-	padding: 10px 40px 16px;
-	list-style: none;
-	background-color: #eee;
-	font-size: 17px;
-	margin: 0;
-	width: calc(50% - 80px);
+    display: flex;
+    flex-wrap: wrap;
+    font-size: 1.5em;
+    padding: 0;
+    margin: 0;
+    padding: 1em 0;
 }
 
 /* Display list items side by side */
 
 #breadcrumb li {
-	display: inline;
+	/* display: inline; */
 }
 
 /* Add a slash symbol (/) before/behind each list item */
@@ -144,14 +139,12 @@ nav h1 a {
 /* Add a color to all links inside the list */
 
 #breadcrumb li a {
-	color: #0275d8;
 	text-decoration: none;
 }
 
 /* Add a color on mouse-over */
-
 #breadcrumb li a:hover {
-	color: #01447e;
+	color: lightgoldenrodyellow;
 	text-decoration: underline;
 }
 
@@ -283,33 +276,14 @@ nav h1 a {
 
 /* ====================== Restaurant Details ====================== */
 
-.inside header {
-	position: fixed;
-	top: 0;
-	width: 100%;
-	z-index: 1000;
-}
-
 .inside #map-container {
 	background: none none repeat scroll 0 0;
-	/* height: 87%; */
-	/* position: fixed; */
-	/* right: 0; */
-	/* top: 80px; */
-	/* width: 50%; */
 	width: 100%;
 }
 
 .inside #map {
 	background-color: #ccc;
-	/* height: 100%; */
 	width: 100%;
-}
-
-.inside #footer {
-	/* bottom: 0; */
-	/* position: absolute; */
-	/* width: 50%; */
 }
 
 #restaurant-name {
@@ -325,7 +299,6 @@ nav h1 a {
 }
 
 #restaurant-img {
-	/* width: 90%; */
 	max-width: 100%;
 }
 
@@ -347,21 +320,12 @@ nav h1 a {
 	padding: 2px 0;
 	text-align: center;
 	text-transform: uppercase;
-	/* width: 90%; */
 }
 
 #restaurant-container,
 #reviews-container {
 	border-bottom: 1px solid #d9d9d9;
 	border-top: 1px solid #fff;
-	/* padding: 140px 40px 30px; */
-	/* width: 50%; */
-	/* display:  flex; */
-	/* flex-direction:  column; */
-	/* margin-left: auto; */
-	/* margin-right:  auto; */
-	/* flex: 1 100%; */
-	/* width: 100%; */
 	margin-top: 2em;
 }
 
@@ -412,6 +376,12 @@ nav h1 a {
 
 /* MEDIA QUERIES */
 
+@media (min-width: 520px){
+	#breadcrumb {
+		flex-direction: column;
+	}
+}
+
 @media (min-width: 600px) {
 
 	.filter-options {
@@ -446,6 +416,10 @@ nav h1 a {
 
 	#restaurants-list li {
 		width: 32%;
+	}
+	
+	#breadcrumb {
+		flex-flow: row nowrap;
 	}
 
 }
