--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,5 @@
 @charset "utf-8";
 /* CSS Document */
-
 *,
 body,
 html {
@@ -111,6 +110,8 @@ nav h1 a {
 	font-weight: 200;
 	letter-spacing: 10px;
 	text-transform: uppercase;
+	/* margin: 1em auto; */
+	/* padding: 1em; */
 }
 
 #breadcrumb {
@@ -134,6 +135,11 @@ nav h1 a {
 
 #breadcrumb li a {
 	text-decoration: none;
+}
+
+#breadcrumb li h2 {
+	color: #ddd;
+    font-weight: 400;
 }
 
 /* Add a color on mouse-over */
@@ -361,10 +367,11 @@ nav h1 a {
 }
 
 .skip {
-	margin: 1em auto;
-    font-size: 1.2em;
-    margin-right: 1em;
+	/* margin: 1em auto; */
+	font-size: 1.2em;
+	margin-right: 1em;
 	margin-left: 1em;
+	margin-top: 4em;
 }
 
 /* MEDIA QUERIES */
